<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/homePage_textView"
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="32sp" />

        <ImageView
            android:id="@+id/homePage_imageView"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            tools:src="@tools:sample/avatars" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/open_graph_title"
                android:textSize="20sp" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/homePage_lineChartOpen"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/close_graph_title"
                android:textSize="20sp" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/homePage_lineChartClose"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/high_graph_title"
                android:textSize="20sp" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/homePage_lineChartHigh"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/low_graph_title"
                android:textSize="20sp" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/homePage_lineChartLow"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/volume_graph_title"
                android:textSize="20sp" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/homePage_lineChartVolume"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="10dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>